[metadata]
name = tdadynamicnetworks-tsudijon
version = 0.0.1
author = T. Sudijono
author_email = timothysudijono@gmail.com
description = A pipeline for detecting periodicity in node-weighted dynamic networks via topological data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsudijon/dynamic_networks
project_urls =
    Bug Tracker = https://github.com/tsudijon/dynamic_networks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src